Implements proper overwrite for functions
- use of parameter "overwrite" for functions which create GRASS layers
is implementede

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: fireSim
 Type: Package
 Title: Fire simulations using different routines
 Version: 0.0-1
-Date: 2013-09-12_12-50
+Date: 2013-09-20_14-43
 Author: Rainer M. Krug
 Maintainer: Rainer M Krug <Rainer@krugs.de>
 Description: Collection of different seed fire routines.
@@ -14,4 +14,4 @@ Depends:
 LinkingTo: Rcpp
 Collate:
     'fireBlockBurnGRASS.R'
-    'seedDisp-package.R'
+    'package.R'
